Add support for auto-generated UI

--- a/mobile-app/www/css/index.css
+++ b/mobile-app/www/css/index.css
@@ -33,7 +33,7 @@ body {
 
 .ui-panel-wrapper, .ui-page {
     background: #eee !important;
-    overflow-y:visible;
+    overflow:visible;
     min-height:100%;
 }
 
