--- a/mobile-app/www/css/index.css
+++ b/mobile-app/www/css/index.css
@@ -1,61 +1,53 @@
-/*
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
- */
 * {
-    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+    -webkit-tap-highlight-color:rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
 html, body {
     height:100%;
-}
-
-body {
-    font-family:'HelveticaNeue-Thin', sans-serif-light, sans-serif ;
     margin:0;
     padding:0;
     width:100%;
 }
 
-.ui-panel-wrapper, .ui-page {
-    background: #eee !important;
-    overflow:visible;
+.ui-page{
+    background:#eee !important;
     min-height:100%;
 }
 
-/* Portrait layout (default) */
-.app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-    height:50px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+.ui-panel-wrapper {
+    background:#eee !important;
+    overflow:visible;
+    min-height:inherit;
+}
+
+.ui-panel {
+    width:272px !important; 
+    color:#888
+}
+
+.ui-panel h3 {
+    padding:20px;
+}
+
+.ui-content {
+    padding:0;
+    overflow:visible;
+    min-height:inherit
+}
+
+.ui-listview {
+    padding:1em 0;
+}
+
+.ui-flipswitch {
+    transition:all 0.2s !important;
 }
 
 .item {
-    background: #fff;
+    background:#fff;
     margin:.5em !important;
     border-radius:2px !important;
-    box-shadow: 0 2px 1px rgba(0,0,0,0.1), 0 0 2px rgba(0,0,0,0.1) !important;
+    box-shadow:0 2px 1px rgba(0,0,0,0.1), 0 0 2px rgba(0,0,0,0.1) !important;
 }
 
 .item img {
@@ -68,11 +60,11 @@ table {
 }
 
 td:last-child {
-    text-align: right;
+    text-align:right;
 }
 
 .ui-panel-inner {
-    padding:0 ;
+    padding:0;
 }
 
 #count {
@@ -82,18 +74,18 @@ td:last-child {
     height:28px; 
     top:5px; 
     line-height:29px;
-    font-weight: 100 ;
+    font-weight:100 ;
 }
 
 .ui-icon-app:after {
     background-image:url("../img/cordova.svg");
-    background-size: 18px 18px;
+    background-size:18px 18px;
 }
 
 .ui-icon-info {
     background:#4cf !important;
     color:#aaa !important;
-    border-radius: 0 !important;
+    border-radius:0 !important;
 }
 
 h3 {
@@ -108,74 +100,92 @@ h3 {
 
 .ui-panel-dismiss-open.ui-panel-dismiss-position-left {
     background-color:rgba(0,0,0,0);
-    left: 17em;
+    left:17em;
 }
 
-.ui-input-text {margin-top:0 ; -webkit-box-shadow: none ; box-shadow: none ;}
-#name {text-align: center; font-weight: normal;}
+.ui-input-text {
+    margin-top:0 ; 
+    -webkit-box-shadow:none ; 
+    box-shadow:none ;
+}
+
+#name {
+    text-align:center; font-weight:normal;
+}
+
+#dh > img {
+    -webkit-filter:drop-shadow(0 0 2px rgba(0,0,0,0.2));
+    border-radius: 0 !important;
+}
+
+#dm {
+    word-wrap: break-word;
+    padding:0 1em;
+}
 
 #ptr {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    color: #ccc;
-    z-index: -10;
-    text-align: center;
-    height: 50px;
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    color:#ccc;
+    z-index:-10;
+    text-align:center;
+    height:50px;
 }
 
 #ptr .zmdi {
-    opacity: .6;
-    font-size: 34px;
-    width: auto;
-    height: auto;
-    transition: all .25s ease;
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
-    margin-top: 5px;
+    opacity:.6;
+    font-size:34px;
+    width:auto;
+    height:auto;
+    transition:all .25s ease;
+    -webkit-transform:rotate(90deg);
+    transform:rotate(90deg);
+    margin-top:5px;
 }
 .ptr-refresh #ptr .zmdi {
-    -webkit-transform: rotate(270deg);
-    transform: rotate(270deg);
+    -webkit-transform:rotate(270deg);
+    transform:rotate(270deg);
 }
 .ptr-loading #ptr .zmdi,
 .ptr-reset #ptr .zmdi {
-    display: none;
+    display:none;
 }
 
 .loading {
-    display: inline-block;
-    text-align: center;
-    opacity: .4;
-    margin: 12px 0 0 5px;
-    display: none;
+    display:inline-block;
+    text-align:center;
+    opacity:.4;
+    margin:12px 0 0 5px;
+    display:none;
 }
 .ptr-loading .loading {
-    display: block;
+    display:block;
 }
 
 #content {
-    min-height: 100%;
     background:#eee;
     overflow-y:visible;
+    min-height:inherit; 
+    padding:0 1em;
 }
 
 .ptr-loading #content, .ptr-reset #content,
 .ptr-loading #ptr, .ptr-reset #ptr {
-    transition: all .25s ease;
+    transition:all .25s ease;
 }
 
 .ptr-reset #content {
-    -webkit-transform: translate3d( 0, 0, 0 );
-    transform: translate3d( 0, 0, 0 );
+    -webkit-transform:translate3d( 0, 0, 0 );
+    transform:translate3d( 0, 0, 0 );
 }
 
 .ptr-loading #content {
-    -webkit-transform: translate3d( 0, 50px, 0 );
-    transform: translate3d( 0, 50px, 0 );
+    -webkit-transform:translate3d( 0, 50px, 0 );
+    transform:translate3d( 0, 50px, 0 );
 }
 
 .wow {
-   visibility: hidden;
+   visibility:hidden;
 }
