Better handling of mDNS responses and search cancellation

--- a/mobile-app/www/css/index.css
+++ b/mobile-app/www/css/index.css
@@ -22,6 +22,10 @@ html, body {
     background:#eee;
 }
 
+.ui-overlay-a {
+    background:#eee !important;
+}
+
 .ui-page{
     background:#eee !important;
     min-height:100%;
