--- a/user-interfaces/examples/template/www/index.html
+++ b/user-interfaces/examples/template/www/index.html
@@ -8,11 +8,11 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
+        <summon request="bluetooth"/>
         <title>Template</title>
     </head>
     <body>
         <div id="console"></div>
-        <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
