--- a/user-interfaces/examples/blees-list/www/css/index.css
+++ b/user-interfaces/examples/blees-list/www/css/index.css
@@ -62,6 +62,7 @@ div.frame {
 .charImgCell, .charValueCell{
     width: 20%;
     text-align:center;
+    font-size:1em !important;
 }
 
 
@@ -79,6 +80,10 @@ div.frame {
     /*left: 5px; */
     height: 70vh;
     overflow: auto;
+}
+
+#template {
+    display:none;
 }
 
 #centralblees {
