--- a/mobile-app/src/android/res/layout/item.xml
+++ b/mobile-app/src/android/res/layout/item.xml
@@ -11,8 +11,9 @@
         android:src="@drawable/widget"
         android:layout_width="@android:dimen/notification_large_icon_width"
         android:layout_height="@android:dimen/notification_large_icon_height"
-        android:layout_gravity="center_horizontal"
-        android:background="?android:attr/selectableItemBackground"/>
+        android:layout_weight="1"
+        android:scaleType="fitCenter"
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:layout_width="wrap_content"
