--- a/user-interfaces/examples/signpost/www/css/index.css
+++ b/user-interfaces/examples/signpost/www/css/index.css
@@ -7,7 +7,7 @@
   user-select: none;
 }
 
-html, body { 
+html, body {
   margin:0;
   height:100%;
   overflow:hidden;
@@ -21,6 +21,7 @@ html, body {
   margin-bottom:-5px;
   display:inline-block;
   font-family: monospace;
+  font-size:12px;
 }
 
 #rect {
@@ -33,12 +34,16 @@ html, body {
   font-size:50px;
 }
 
-#temp, #hum, #lux, #pres {
+#temp, #hum, #lux, #pres, #stamp {
   font-size:7px;
 }
 
 #co2, #vocp, #voci {
   font-size:20px;
+}
+
+.flash {
+  animation:flash 2s infinite;
 }
 
 .mod {
@@ -79,6 +84,7 @@ html, body {
 table td {
   text-align:left;
   font-size:7px;
+  padding:0;
 }
 
 tr:first-child {
@@ -91,7 +97,7 @@ line {
 }
 
 b {
-  font-size:8px;
+  font-size:7px;
   font-weight:normal;
 }
 
@@ -104,4 +110,10 @@ text {
 image {
   width:20px;
   height:20px;
+}
+
+@keyframes flash {
+    0% {opacity: 0;}
+    50% {opacity: 1;}
+    100% {opacity: 0;}
 }
